feat: Changed error text

--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -5,7 +5,7 @@ block body
     .app-error
       a(href='/')
         img(src='/_assets/svg/logo-wikijs.svg')
-      strong Oops, something went wrong...
+      strong Что-то пошло не так... Попробуйте перезагрузить страницу
       span= message
             
       if error.stack
