--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -685,7 +685,7 @@
         display:inline-block;
         vertical-align:top;
         padding-top:0;
-        
+
         &:first-child {
           width: 100%;
         }
@@ -1275,6 +1275,8 @@
         color: #000;
         box-shadow: none;
         text-shadow: none;
+        white-space: pre-wrap !important;
+        overflow-wrap: break-word !important;
       }
     }
   }
