fix: Apply theme style to embedded diagram (#7903)
When diagrams are created with "adaptive colors" they automatically
change to light-/darkmode depending on the browser preference. This
leads to rendering problems when the settings in the browser differ
from the wiki.js theme setting.

Fixes #7677

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -767,6 +767,16 @@
     svg:first-child {
       direction: ltr;
     }
+
+    // Apply color scheme from wiki.js
+    svg {
+      color-scheme: light !important;
+    }
+    @at-root .theme--dark & {
+      svg {
+        color-scheme: dark !important;
+      }
+    }
   }
 
   // ---------------------------------
