--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -764,8 +764,17 @@
   .diagram {
     margin-top: 1rem;
     overflow: auto;
-    svg:first-child {
-      direction: ltr;
+
+    svg {
+      color-scheme: light;
+
+      &:first-child {
+        direction: ltr;
+      }
+
+      @at-root .theme--dark & {
+        color-scheme: dark !important;
+      }
     }
   }
 
