fix: Restore `!important` qualifier
This is required, because the <svg> element has an inline style with
`color-scheme: light dark`, which has higher specificity than our css
rule.

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -766,7 +766,7 @@
     overflow: auto;
 
     svg {
-      color-scheme: light;
+      color-scheme: light !important;
 
       &:first-child {
         direction: ltr;
